Unified WebKit build fails https://bugs.webkit.org/show_bug.cgi?id=219734

Reviewed by Tim Horton.

* UIProcess/RemoteLayerTree/mac/ScrollingTreeFrameScrollingNodeRemoteMac.h:
* UIProcess/SpeechRecognitionRemoteRealtimeMediaSource.h:
* UIProcess/SpeechRecognitionRemoteRealtimeMediaSourceManager.cpp:


Canonical link: https://commits.webkit.org/232288@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270621 268f45cc-cd09-0410-ab3c-d52691b4dbfc